--- a/css/styles.css
+++ b/css/styles.css
@@ -13,25 +13,14 @@
 body {
     display: flex;
     justify-content: center;
-    height: 100vh;
-    background: #f7f1e3;
+    height: 90vh;
     overflow-x: hidden;
 }
 
-body::-webkit-scrollbar {
-    width: 4px;
-
+::-webkit-scrollbar {
+    display: none;
 }
 
-body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
-    border-radius: 5px;
-}
 
 h1 {
     width: 300px;
@@ -66,18 +55,27 @@ p {
     background: #fff;
     user-select: none;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+ul {
+    width: 100%;
+    height: 100%;
+
 }
 
 ul,
 li {
-    width: 100%;
     font-family: "Urbanist", sans-serif;
     font-size: 1.2rem;
     color: #333;
 }
 
+
 li:first-child {
-    margin-top: 20px;
+    margin-top: 0;
 }
 
 li {
@@ -93,6 +91,9 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: #f7f1e3;
+    padding: 1.5rem 3rem;
+    height: 80%;
 }
 
 .button_container {
@@ -103,6 +104,8 @@ li {
 
 .stoptime_display {
     width: 100%;
+    margin-top: 40px;
+    overflow-y: auto;
 }
 
 #time {
@@ -144,12 +147,13 @@ li {
     font-size: 28px;
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:600px) {
 
     .watch_container {
+        margin-top: 30px;
         width: 90%;
         max-width: unset;
-
+        height: 95%;
     }
 
     h1 {
@@ -158,11 +162,11 @@ li {
 
     p {
         width: 100%;
-        padding: 0;
         border-radius: 5px;
         margin: 15px 0px;
         font-size: 36px;
     }
+
 
     button {
         padding: 13px 0;
@@ -179,7 +183,9 @@ li {
     #centisecond {
         font-size: 20px;
     }
+
 }
+
 
 
 @media screen and (max-width:400px) {
@@ -187,13 +193,17 @@ li {
     .watch_container {
         width: 95%;
         max-width: unset;
+        padding: 1.5rem 0;
+        align-items: center;
 
     }
 
     p {
-        padding: 8px 0;
+        padding-left: 15px;
+        padding-right: 15px;
         margin: 15px auto;
-        font-size: 1.4rem;
+        font-size: 30px;
+        width: unset;
     }
 
     #centisecond {
